# readium-rs

./: .gitignore  CLAUDE.md  Cargo.toml
include/: readium_lcp.h
samples/: 9781662536939.lcpl
src/: cipher.rs  encoding.rs  epub.rs  ffi.rs  key.rs  lib.rs  license.rs  main.rs
