[package]
name = "readium-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "readium_lcp"
crate-type = ["cdylib", "rlib"]

[dependencies]
aes = "0.8"
base64 = "0.22.1"
block-padding = "0.3"
cbc = "0.1"
chrono = "0.4.41"
clap = { version = "4.5", default-features = false, features = ["std", "derive"] }
flate2 = "1.0"
hex = "0.4.3"
rand = "0.9.2"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "default-tls"] }
roxmltree = "0.21.1"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.143"
sha2 = "0.10.9"
x509-cert = "0.2.5"
zeroize = { version = "1", features = ["zeroize_derive", "serde"] }
zip = { version = "5.1.1", default-features = false, features = ["deflate"] }
